=== HEAD

* Raise an error if attempting to use a migration file not containing a single migration (jeremyevans) (#1127)

* Automatically set referenced key for self referential foriegn key constraint for simple non-autoincrementing primary key on MySQL (jeremyevans) (#1126)

=== 4.30.0 (2016-01-04)

* Add Dataset#insert_conflict and #insert_ignore on SQLite for handling uniqueness violations (Sharpie) (#1121)

* Make Database#row_type in pg_row extension handle different formats of schema-qualified types (jeremyevans) (#1119)

* Add identifier_columns plugin for handling column names containing 2 or more consecutive underscores when saving (jeremyevans) (#1117)

* Support :eager_limit and :eager_limit_strategy dataset options in model eager loaders for per-call limits and strategies (chanks) (#1115)

* Allow IPv6 addresses in database URLs on ruby 1.9+ (hellvinz, jeremyevans) (#1113)

* Make Database#schema :db_type entries include sizes for string types on DB2 (jeremyevans)

* Make Database#schema :db_type entries include sizes for string and decimal types in the jdbc adapter's schema parsing (jeremyevans)

* Recognize another disconnect error in the tinytds adapter (jeremyevans)

=== 4.29.0 (2015-12-01)

* Add Model#json_serializer_opts method to json_serializer plugin, allowing for setting to_json defaults on per-instance basis (jeremyevans)

* Add uuid plugin for automatically setting UUID column when creating a model object (pdrakeweb, jeremyevans) (#1106)

* Allow the sqlanywhere adapter to work with sharding (jeremyevans)

* Support blobs as bound variables in the oracle adapter (jeremyevans) (#1104)

* Order by best results first when using the Database#full_text_search :rank option on PostgreSQL (chanks) (#1101)

* Run Database#table_exists? inside a savepoint if currently in a transaction and the database supports savepoints (jeremyevans) (#1100)

* Allow Database#transaction :retry_on option to work when using savepoints (jeremyevans)
