@@ -1,5 +1,7 @@
 === HEAD
 
+* Support parsing PostgreSQL arrays with explicit bounds (jeremyevans) (#1131)
+
 * Raise an error if attempting to use a migration file not containing a single migration (jeremyevans) (#1127)
 
 * Automatically set referenced key for self referential foriegn key constraint for simple non-autoincrementing primary key on MySQL (jeremyevans) (#1126)
